tests/compile_fail/conflicting_file.stderr
error: `no_file` is incompatible with `file`.
 --> $DIR/conflicting_file.rs:8:9
  |
8 |     pub value: bool,
  |         ^^^^^
